samsung number display delay fix

--- a/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
 
-  <div class="row">
+  <!--<div class="row">
 
     <div class="col-md-12">
 
@@ -21,10 +21,10 @@
     </div>
 
 
-  </div>
+  </div>-->
 
   <div class="row">
-    <div class="col-md-12">
+    <!--<div class="col-md-12">
 
       <loading-panel [IsBusy]="true">
           <div style="width:200px; height:200px; border: 1px solid; border-color: lightgray">
@@ -68,7 +68,7 @@
         </quill-editor>
       </div>
       
-    </div>
+    </div>-->
 
     <div class="col-md-12 mt-2">
       <form class="example-form">
@@ -76,12 +76,10 @@
                    [required]="true"
                    [Last4Only]="false"
                    [DisplayToggle]="true"></ssn-input>
-        <!--<mat-error *ngIf="SnnFormControl.hasError('required')">
-          required ssn
-        </mat-error>-->
+        
       </form>
-</div>
-    <div class="col-md-12">
+    </div>
+    <!--<div class="col-md-12">
 
       <div fxLayout="column" fxFlex="20">
 
@@ -93,8 +91,8 @@
 
       
 
-    </div>
-    <div class="col-md-12">
+    </div>-->
+    <!--<div class="col-md-12">
 
       <div fxLayout="column" fxFlex="100">
 
@@ -108,7 +106,7 @@
 
       </div>
 
-    </div>
+    </div>-->
 
   </div>
 
