--- a/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
@@ -92,11 +92,11 @@
       
 
     </div>-->
-    <!--<div class="col-md-12">
+    <div class="col-md-12">
 
       <div fxLayout="column" fxFlex="100">
 
-        <img-upload PreviewWidth="300px"
+        <img-upload [preview-flex-size]="20"
                     [aspect-ratio-width]="2"
                     [aspect-ratio-height]="1"
                     [thumbnail-actual-width]="300"
@@ -106,7 +106,7 @@
 
       </div>
 
-    </div>-->
+    </div>
 
   </div>
 
