fix editor binding and size

--- a/angular-material2-extended/src/app/fomly-fields/extensions/ngx-quill/formly-quill.component.html
+++ b/angular-material2-extended/src/app/fomly-fields/extensions/ngx-quill/formly-quill.component.html
@@ -1,4 +1,4 @@
-<quill-editor [formControl]="formControl" [formlyAttributes]="field" >
+<quill-editor [formControl]="formControl" [formlyAttributes]="field" [height]="to.editor.height" >
   <div quill-editor-toolbar>
     <span class="ql-formats">
       <button class="ql-bold" [title]="'Bold'"></button>
