--- a/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
@@ -24,7 +24,7 @@
   </div>-->
 
   <div class="row">
-    <!--<div class="col-md-12">
+    <div class="col-md-12">
 
       <loading-panel [IsBusy]="true">
           <div style="width:200px; height:200px; border: 1px solid; border-color: lightgray">
@@ -40,7 +40,7 @@
 
     <div class="col-md-12 mt-2">
       <div>
-        <quill-editor [(ngModel)]="editor">
+        <quill-editor [(ngModel)]="editor" placeholder="In Placeholder..">
           <div quill-editor-toolbar>
             <span class="ql-formats">
               <button class="ql-bold" [title]="'Bold'"></button>
@@ -68,7 +68,7 @@
         </quill-editor>
       </div>
       
-    </div>-->
+    </div>
 
     <div class="col-md-12 mt-2">
       <form class="example-form">
