--- a/angular-material2-extended/src/app/views/root/external-views/register/registration.component.html
+++ b/angular-material2-extended/src/app/views/root/external-views/register/registration.component.html
@@ -14,7 +14,7 @@
       <formly-stepper [FormlyStepper]="Forms" [StepperType]="1"
                       [HideHeader]="false"
                       [Busy]="IsWorking"
-                      (OnCompleted)="Complete($event)"></formly-stepper>
+                      (OnCompleted)="formSubmit($event)"></formly-stepper>
 
       <!--
 
