correct aot errors

--- a/angular-material2-extended/src/app/views/root/external-views/register/registration.component.html
+++ b/angular-material2-extended/src/app/views/root/external-views/register/registration.component.html
@@ -13,7 +13,7 @@
 
       <formly-stepper [FormlyStepper]="Forms" [StepperType]="1"
                       [HideHeader]="false"
-                      [Busy]="IsWorking"
+                      [Busy]="working"
                       (OnCompleted)="formSubmit($event)"></formly-stepper>
 
       <!--
